@@ -698,7 +698,7 @@ protected:
      * @param zos is an array containing the zeros of the encoders.
      * @return true if initialized succeeded, false if it wasn't executed, or assert.
      */
-    bool initialize (int size, const int *amap, const double *enc, const double *zos);
+    bool initialize (int size, const int *amap, const double *enc, const double *zos, const double *nw);
           
     /**
      * Clean up internal data and memory.
@@ -756,7 +756,7 @@ protected:
      * @param amap is a lookup table mapping axes onto physical drivers.
      * @return true if initialized succeeded, false if it wasn't executed, or assert.
      */
-    bool initialize (int size, const int *amap, const double *enc, const double *zos);
+    bool initialize (int size, const int *amap, const double *enc, const double *zos, const double *nw);
           
     /**
      * Clean up internal data and memory.
